--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -17,8 +17,8 @@ test:
 
 # set these environment variables on your prod server
 production:
-  # <<: *defaults
-  # database: locomotive_prod
+  <<: *defaults
+  database: locomotive_prod
 
   # other settings for production
   # host: <%= ENV['MONGOID_HOST'] %>
@@ -31,4 +31,4 @@ production:
   # uri: <%= ENV['MONGOHQ_URL'] %>
 
   # bushido (mongohq_url will also work)
-  uri: <%= ENV['MONGODB_URL'] %>
+  # uri: <%= ENV['MONGODB_URL'] %>
